<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mortgage Calculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="purchasePriceTextView">Purchase Price:</string>
    <string name="purchasePriceUnit">$    </string>
    <string name="downPaymentTextView">Down Payment:</string>
    <string name="downPaymentUnit">%</string>
    <string name="mortgageTermTextView">Mortgage term:</string>
    <string name="mortgageTermUnit">years</string>
    <string name="interestRateTextView">Interest rate:</string>
    <string name="interestRateUnit">%    </string>
    <string name="propertyTaxTextView">Property tax:</string>
    <string name="propertyTaxUnit">$ per year</string>
    <string name="propertyInsuranceTextView">Property insurance:</string>
    <string name="propertyInsuranceUnit">$ per year</string>
    <string name="PMITextView">PMI:</string>
    <string name="PMIUnit">%</string>
    <string name="zipCodeTextView">Zip Code:</string>
    <string name="firstPaymentDateTextView">First payment date:</string>
    <string name="button">Calculator</string>
    <string name="month_prompt"></string>

    <string-array name="month_arrays">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>

    <string name="title_activity_result">ResultActivity</string>
    
    <string name="totalMonthlyPaymentLabel">Total monthly payment: </string>
    <string name="totalMortgagePaymentLabel">Total of 360 payments: </string>
    <string name="payoffDateLabel">Pay-off date: </string>
    <string name="reCalculate">Calculate Again!</string>
    

</resources>
