<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:id="@+id/tableLayout"
    android:padding="5dp">
    
   <!-- tableRow0 -->
   <TableRow android:layout_height="wrap_content" 
      android:layout_width="match_parent" android:id="@+id/tableRow0">
      <TextView 
         android:layout_width="wrap_content" 
         android:layout_height="wrap_content" 
         android:text="@string/totalMonthlyPaymentLabel" android:textColor="#000" 
         android:gravity="right" android:paddingRight="5dp"
         android:layout_weight="1" />
      <TextView android:layout_width="wrap_content" 
         android:id="@+id/totalMonthlyPaymentTextView" 
         android:layout_height="wrap_content" android:layout_span="1" 
         android:inputType="numberDecimal" android:layout_weight="1"/>
   </TableRow>  
   
   
   <TableRow android:layout_height="wrap_content" 
      android:layout_width="match_parent" android:id="@+id/tableRow1">
      <TextView 
         android:layout_width="wrap_content" 
         android:layout_height="wrap_content" 
         android:text="@string/totalMortgagePaymentLabel" android:textColor="#000" 
         android:gravity="right" android:paddingRight="5dp"
         android:layout_weight="1" />
      <TextView android:layout_width="wrap_content" 
         android:id="@+id/totalMortgagePaymentTextView" 
         android:layout_height="wrap_content" android:layout_span="1" 
         android:inputType="numberDecimal" android:layout_weight="1"/>
   </TableRow>  
   
   <TableRow android:layout_height="wrap_content" 
      android:layout_width="match_parent" android:id="@+id/tableRow2">
      <TextView 
         android:layout_width="wrap_content" 
         android:layout_height="wrap_content" 
         android:text="@string/payoffDateLabel" android:textColor="#000" 
         android:gravity="right" android:paddingRight="5dp"
         android:layout_weight="1" />
      <TextView android:layout_width="wrap_content" 
         android:id="@+id/payoffDateTextView" 
         android:layout_height="wrap_content" android:layout_span="1" 
         android:inputType="numberDecimal" android:layout_weight="1"/>
   </TableRow>  
   
  
    <Button android:id="@+id/reCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reCalculate"
        android:gravity="center"
        android:padding="10dp"
        android:paddingTop="100dp"
        android:clickable="true"/>
        
   
</TableLayout>